--- a/group_vars/bb_config/bbexporter_config.yml
+++ b/group_vars/bb_config/bbexporter_config.yml
@@ -1,1 +1,7 @@
-
+modules:
+  ping4:
+    prober: icmp
+    timeout: 3s
+    icmp:
+      preferred_ip_protocol: "{{ test1_pwd }}"
+      ip_protocol_fallback: "{{ test2_pwd }}"
