--- a/playbooks/sample.yml
+++ b/playbooks/sample.yml
@@ -17,4 +17,4 @@
       replace:
         path: /home/madhuboyina/work/git/ansible/group_vars/bb_config/bbexporter_config.yml
         regexp: 'test1_pwd'
-        replace: {{test1_pwd}}
+        replace: "{{test1_pwd}}"
