--- a/playbooks/sample.yml
+++ b/playbooks/sample.yml
@@ -1,5 +1,5 @@
 ---
-  - name: "Playing with Ansible and Git"
+  - name: "Playing with Ansible and Git11"
     hosts: localhost
     connection: local 
     vars:
